--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.27.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "zustand": "^3.7.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.3",
@@ -43,6 +44,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "prettier": "^2.6.1",
+    "react-icons": "^4.3.1",
     "typescript": "4.5.5",
     "yarn-audit-fix": "^9.2.1"
   },
