--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.27.1",
     "styled-components": "^5.3.3",
+    "swr": "^1.2.2",
     "zustand": "^3.7.1"
   },
   "devDependencies": {
